--- a/LeBazar/exports/statsf1_season_1996.json
+++ b/LeBazar/exports/statsf1_season_1996.json
@@ -1110,6 +1110,80 @@
           "points": "-"
         }
       ]
+    },
+    {
+      "gp_name": "16. Japon 13 oct",
+      "date": "16. Japon 13 oct",
+      "drivers": [
+        {
+          "name": "1 AUS",
+          "points": null
+        },
+        {
+          "name": "D. HILL",
+          "points": "10"
+        },
+        {
+          "name": "J. VILLENEUVE",
+          "points": "-"
+        },
+        {
+          "name": "M. SCHUMACHER",
+          "points": "6"
+        },
+        {
+          "name": "J. ALESI",
+          "points": "-"
+        },
+        {
+          "name": "M. HAKKINEN",
+          "points": "4"
+        },
+        {
+          "name": "G. BERGER",
+          "points": "3"
+        },
+        {
+          "name": "D. COULTHARD",
+          "points": "-"
+        },
+        {
+          "name": "R. BARRICHELLO",
+          "points": "-"
+        },
+        {
+          "name": "O. PANIS",
+          "points": "-"
+        },
+        {
+          "name": "E. IRVINE",
+          "points": "-"
+        },
+        {
+          "name": "M. BRUNDLE",
+          "points": "2"
+        },
+        {
+          "name": "H. FRENTZEN",
+          "points": "1"
+        },
+        {
+          "name": "M. SALO",
+          "points": "-"
+        },
+        {
+          "name": "J. HERBERT",
+          "points": "-"
+        },
+        {
+          "name": "P. DINIZ",
+          "points": "-"
+        },
+        {
+          "name": "J. VERSTAPPEN",
+          "points": "-"
+        }
+      ]
     }
   ]
 }
