--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "bs4>=0.0.2",
     "lxml>=6.0.2",
+    "polars>=1.36.1",
     "pydantic>=2.12.3",
     "requests>=2.32.5",
     "selenium>=4.38.0",
